--- a/AssetManagementSystem.PL/Views/User/ManageRoles.cshtml
+++ b/AssetManagementSystem.PL/Views/User/ManageRoles.cshtml
@@ -62,7 +62,7 @@
 
                 <div class="mt-4">
                     <button type="submit" class="btn btn-primary">Update Roles</button>
-                    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+                    <a asp-action="DepartmentUsers" class="btn btn-secondary">Back to List</a>
                 </div>
             </form>
         </div>
